[project]
name = "continual-go"
version = "0.1.0"
description = "A big world environment for continual reinforcement learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.6",
    "jax[cuda12]>=0.9.2",
    "jaxtyping>=0.3.9",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "torch>=2.12.1",
    "trac-optimizer>=0.0.2",
]

[tool.uv.workspace]
members = [
    "alpha_zero",
    ".",
    "algorithms",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
