[project]
name = "alpha-zero"
version = "0.1.0"
description = "AlphaZero agent for the ContinualGo project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "continual-go",
    "dm-haiku>=0.0.16",
    "mctx>=0.0.6",
    "pydantic>=2.13.4",
    "tyro>=1.0.13",
    "wandb>=0.27.0",
]

[tool.uv.sources]
continual-go = { workspace = true }
